--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+.ql-container {
+    border: none !important;
+}
+.ql-toolbar {
+    border: none !important;
+}
+.ql-editor {
+    border: none !important;
+}
